# Kyrsovaya

./: CMakeLists.txt  addressvalidator.cpp  addressvalidator.h  busroutefactory.cpp  busroutefactory.h  combinedoptimization.cpp  combinedoptimization.h  costoptimization.cpp  costoptimization.h  database.cpp  database.h  errorhandler.cpp  errorhandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optimizationstrategy.h  reportgenerator.cpp  reportgenerator.h  route.cpp  route.h  routefactory.h  routeoptimizer.cpp  routeoptimizer.h  routesearcher.cpp  routesearcher.h  stops.cpp  stops.h  time.cpp  time.h  timeoptimization.cpp  timeoptimization.h  workwithapi.cpp  workwithapi.h
